spacing fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,7 +224,7 @@ h6 {
 
 h1 {
   font-size: var(--font-size-xxlarge);
-  margin: var(--spacing-8) 0 var(--spacing-4) 0;
+  margin: var(--spacing-8) 0 var(--spacing-2) 0;
   font-weight: var(--font-weight-bold);
 }
 
